Table and cards in bootstrap

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 	margin: 0px auto;
 	padding: 50px 0px 50px 0px;
 	border-bottom: 1px ridge;
-	/*min-height: 10px;*/
+	min-height: 10px;
 }
 
 .jumbotron{
@@ -15,7 +15,12 @@
 	margin: 0px auto;
 	background: #9575CD;
 	color: floralwhite;
+}
 
+.address{
+	font-size: 80%;
+	margin: 0px;
+	color: #0f0f0f;
 }
 
 .footer{
