--- a/css/style.css
+++ b/css/style.css
@@ -39,5 +39,10 @@ body{
 	
 }
 
-
+.tab-content{
+	border-left: 1px solid #ddd;
+	border-top: 1px solid #ddd;
+	border-bottom: 1px solid #ddd;
+	padding: 10px;
+}
 
