--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,11 @@ body{
 	position: absolute;
 	top: 0;
 	left: 0;
-	min-height: 300px;
-	
+	min-height: 300px;	
+}
+
+#carouselButton{
+	right: 0px;
+	position: absolute;
+	bottom: 0px;
 }
